# COMP304_Assignments

project-1-shell/: CMakeLists.txt  Makefile  README.md  requirements.txt
project-1-shell/module/: CMakeLists.txt  mymodule.c  plot.py
project-1-shell/src/: large_digits.h  shell-skeleton.c
project-2-metro-simulation/: Makefile  README.md  main.cpp
project-3-memory-allocator/: Makefile  README.md  alloc.c  alloc.h  check.py
project-3-memory-allocator/test_framework/: checked_alloc.c  intercept.c  main.c
